<resources>
    <string name="app_name">Sublite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_popular_shows">Popular Shows</string>
    <string name="section_most_downloaded">Most Downloaded</string>
    <string name="section_latest">Latest subtitles</string>
    <string name="see_more">See more</string>
    <string name="try_again">Try again</string>
    <string name="net_not_available">Internet is not available!</string>
    <string name="back_online">Back online!</string>
</resources>