<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="popularAdapter"
            type="com.xwray.groupie.GroupieAdapter" />

        <variable
            name="mostDownloadAdapter"
            type="com.xwray.groupie.GroupieAdapter" />

        <variable
            name="latestAdapter"
            type="com.xwray.groupie.GroupieAdapter" />


        <variable
            name="viewModel"
            type="m4trixtm.sublite.features.subtitle.home.HomeViewModel" />
        
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.subtitle.home.HomeFragment">

        <ScrollView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hideOnLoading="@{viewModel.uiState}"
            android:hideOnError="@{viewModel.uiState}"
            android:showOnSuccess="@{viewModel.uiState}"
            android:id="@+id/home_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    app:layout_constraintTop_toTopOf="@id/home_icons"
                    app:layout_constraintBottom_toBottomOf="@id/home_icons"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/home_title"
                    android:text="@string/app_name"
                    android:layout_margin="5dp"
                    style="@style/Theme.Sublite.AppTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/home_icons"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/home_section_popular"
                    android:layout_margin="5dp"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintBottom_toBottomOf="@id/home_title"
                    app:layout_constraintStart_toEndOf="@id/home_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_margin="5dp"
                        style="@style/Theme.Sublite.IconOnlyButton"
                        android:id="@+id/home_search"
                        app:icon="@drawable/ic_search"
                        android:layout_width="@dimen/home_icons_width"
                        android:layout_height="@dimen/home_icons_height"/>

                    <Button
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="5dp"
                        style="@style/Theme.Sublite.IconOnlyButton"
                        android:id="@+id/home_settings"
                        app:icon="@drawable/ic_settings"
                        android:layout_width="@dimen/home_icons_width"
                        android:layout_height="@dimen/home_icons_height"/>
                </LinearLayout>

                <TextView
                    app:layout_constraintTop_toTopOf="@id/home_section_popular_more"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/home_section_popular_more"
                    android:id="@+id/home_section_popular"
                    android:text="@string/section_popular_shows"
                    android:layout_margin="5dp"
                    style="@style/Theme.Sublite.SectionTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/home_section_popular_more"
                    app:layout_constraintTop_toBottomOf="@id/home_icons"
                    app:layout_constraintBottom_toTopOf="@id/home_section_popular_list"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="5dp"
                    style="@style/AppTheme.moreButton"
                    android:text="@string/see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    app:layout_constraintTop_toBottomOf="@id/home_section_popular_more"
                    app:layout_constraintBottom_toTopOf="@id/home_section_most_downloaded_more"
                    tools:listitem="@layout/item_home_show"
                    android:orientation="horizontal"
                    android:id="@+id/home_section_popular_list"
                    tools:itemCount="1"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:adapter="@{popularAdapter}"
                    android:bindHomeShowList="@{viewModel.popularShows}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    app:layout_constraintTop_toTopOf="@id/home_section_most_downloaded_more"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/home_section_most_downloaded_more"
                    android:id="@+id/home_section_most_downloaded"
                    android:text="@string/section_most_downloaded"
                    android:layout_margin="5dp"
                    style="@style/Theme.Sublite.SectionTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/home_section_most_downloaded_more"
                    app:layout_constraintTop_toBottomOf="@id/home_section_popular_list"
                    app:layout_constraintBottom_toTopOf="@id/home_section_most_downloaded_list"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="5dp"
                    style="@style/AppTheme.moreButton"
                    android:text="@string/see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    app:layout_constraintTop_toBottomOf="@id/home_section_most_downloaded_more"
                    app:layout_constraintBottom_toTopOf="@id/home_section_latest_subtitles_more"
                    tools:listitem="@layout/item_home_subtitle"
                    android:orientation="horizontal"
                    android:id="@+id/home_section_most_downloaded_list"
                    tools:itemCount="1"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:adapter="@{mostDownloadAdapter}"
                    android:bindHomeSubtitleList="@{viewModel.mostDownloadedSubtitles}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    app:layout_constraintTop_toTopOf="@id/home_section_latest_subtitles_more"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/home_section_latest_subtitles_more"
                    android:id="@+id/home_section_latest_subtitles"
                    android:text="@string/section_latest"
                    android:layout_margin="5dp"
                    style="@style/Theme.Sublite.SectionTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/home_section_latest_subtitles_more"
                    app:layout_constraintTop_toBottomOf="@id/home_section_most_downloaded_list"
                    app:layout_constraintBottom_toTopOf="@id/home_section_latest_subtitles_list"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="5dp"
                    style="@style/AppTheme.moreButton"
                    android:text="@string/see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    app:layout_constraintTop_toBottomOf="@id/home_section_latest_subtitles_more"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:listitem="@layout/item_home_subtitle"
                    android:orientation="horizontal"
                    android:id="@+id/home_section_latest_subtitles_list"
                    tools:itemCount="1"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:adapter="@{latestAdapter}"
                    android:bindHomeSubtitleList="@{viewModel.latestSubtitles}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <include
            android:id="@+id/loading_layout"
            app:state="@{viewModel.uiState}"
            layout="@layout/loading_layout"/>

        <include
            android:id="@+id/failure_layout"
            app:state="@{viewModel.uiState}"
            layout="@layout/failure_layout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>